js/js.translator/testData/incremental/invalidation/exceptionsFromInlineFunction/lib2/l2.7.kt
fun qux(): Int {
    return foo() + 1
}
